--- a/data/cards/70903634.yaml
+++ b/data/cards/70903634.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: RightArmoftheForbiddenOne-LART-EN-UR-LE.png
-  illustration: RightArmoftheForbiddenOne-TF04-JP-VG.jpg
+  illustration: RightArmoftheForbiddenOne-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: RightArmoftheForbiddenOne-LOB-EN-UR-UE-25thAnniversaryEdition.png
-  illustration: RightArmoftheForbiddenOne-TF04-EN-VG.jpg
+  illustration: RightArmoftheForbiddenOne-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN137
@@ -307,6 +307,10 @@ sets:
     set_name: World Premiere Pack 2022
     rarities:
     - Prismatic Secret Rare
+  - set_number: ''
+    set_name: Animation Chronicle 2023
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LOB-K122
     set_name: Legend of Blue Eyes White Dragon
