--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -766,6 +766,18 @@
   ko_rr: Daineoreseulleo
   zh-TW:
   zh-CN:
+- en: Tainted Treasure
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
+  ja_romaji: Zaihō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Supreme King Gate
   de: Oberster König Tor
   es: Rey Supremo Puerta
@@ -1520,6 +1532,18 @@
   ja_romaji: Masukudo Hīrō
   ko: 마스크드 히어로
   ko_rr: Maseukeudeu Hieoro
+  zh-TW:
+  zh-CN:
+- en: Visas
+  de: Visas
+  es: Visas
+  fr: Visas
+  it: Visas
+  pt: Visas
+  ja: ヴィサス
+  ja_romaji: Visasu
+  ko: 비서스
+  ko_rr: Biseoseu
   zh-TW:
   zh-CN:
 - en: Vampire
@@ -4689,6 +4713,18 @@
   ko: 이블 히어로
   ko_rr: Ibeul Hieoro
   zh-TW: 邪心英雄
+  zh-CN:
+- en: Diabellestarr
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ディアベルスター
+  ja_romaji: Diaberusutā
+  ko:
+  ko_rr:
+  zh-TW:
   zh-CN:
 - en: Monarch
   de: Monarch
