--- a/data/cards/yugipedia992243.yaml
+++ b/data/cards/yugipedia992243.yaml
@@ -32,7 +32,7 @@ attribute: WIND
 level: 6
 atk: 2400
 def: 600
-materials: 2 Beast, Fiend, and/or Illusion monsters with different Types
+materials: 2 Beast, Fiend, and/or Illusion-Type monsters with different Types
 series:
 - Chimera
 - Phantom Beast
