--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -10,7 +10,7 @@ name:
   ja: ゼノ・メテオロス
   ja_romaji: Zeno Meteorosu
   ko: 제노 메테오로스
-  ko_rr:
+  ko_rr: Jeno Meteoroseu
   zh-TW:
   zh-CN: 异度陨石龙
 text:
