--- a/data/cards/06631034.yaml
+++ b/data/cards/06631034.yaml
@@ -10,7 +10,7 @@ name:
   ja: フロストザウルス
   ja_romaji: Furosutozaurusu
   ko: 프로스트사우루스
-  ko_rr:
+  ko_rr: Peuroseuteusauruseu
   zh-TW:
   zh-CN: 冰霜腕龙
 text:
