--- a/data/cards/15001940.yaml
+++ b/data/cards/15001940.yaml
@@ -10,7 +10,7 @@ name:
   ja: フォアグラシャ・ド・ヌーベルズ
   ja_romaji: Foagurasha Do Nūberuzu
   ko: 포아글라샤 드 누밸즈
-  ko_rr:
+  ko_rr: Poageullasya Deu Nubaeljeu
   zh-TW:
   zh-CN: 新式魔餐 酱鹅肝格剌西亚
 text:
