--- a/data/cards/26223582.yaml
+++ b/data/cards/26223582.yaml
@@ -10,7 +10,7 @@ name:
   ja: ブエリヤベース・ド・ヌーベルズ
   ja_romaji: Bueriyabēsu Do Nūberuzu
   ko: 부에리야베스 드 누밸즈
-  ko_rr:
+  ko_rr: Bueriyabeiseu Deu Nubaeljeu
   zh-TW:
   zh-CN: 新式魔餐 炖鱼羹帕尔
 text:
