--- a/data/cards/27345070.yaml
+++ b/data/cards/27345070.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora - Continue?
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> コンティニュー
   ja_romaji: Vankisshu Souru Kontinyū
-  ko: VS 컨티뉴
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 컨티뉴
+  ko_rr: Baengkisi Soul Keontinyu
   zh-TW:
   zh-CN: 征服之魂 续命
 text:
