--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>闘神の虚像<rt>ロック・オブ・ヴァンキッシャー</rt></ruby>
   ja_romaji: Rokku Obu Vankisshā
   ko: 록 오브 뱅키셔
-  ko_rr:
+  ko_rr: Rok Obeu Baengkisyeo
   zh-TW:
   zh-CN: 斗神的虚像
 text:
