--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora Razen
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ラゼン
   ja_romaji: Vankisshu Souru Razen
-  ko: VS 라젠
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 라젠
+  ko_rr: Baengkisi Soul Rajen
   zh-TW:
   zh-CN: 征服之魂 螺禅
 text:
