--- a/data/cards/53618197.yaml
+++ b/data/cards/53618197.yaml
@@ -10,7 +10,7 @@ name:
   ja: コンフィラス・ド・ヌーベルズ
   ja_romaji: Konfirasu Do Nūberuzu
   ko: 콩피라스 드 누밸즈
-  ko_rr:
+  ko_rr: Kongpiraseu Deu Nubaeljeu
   zh-TW:
   zh-CN: 新式魔餐 油封肉佛拉士
 text:
