--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -9,8 +9,8 @@ name:
   pt: Aposte sua Alma!
   ja: <ruby>Ｓｔａｋｅ<rt>ステイク</rt></ruby> <ruby>Ｙｏｕｒ<rt>ユア</rt></ruby> <ruby>Ｓｏｕｌ<rt>ソウル</rt></ruby>！
   ja_romaji: Suteiku Yua Souru!
-  ko: Stake Your Soul!
-  ko_rr:
+  ko: <ruby>Stake Your Soul!<rt>스테이크 유어 소울</rt></ruby>
+  ko_rr: Seuteikeu Yu-eo Soul!
   zh-TW:
   zh-CN: 赌上你的灵魂！
 text:
