--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora Pluton HG
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> プルトン<ruby>Ｈ<rt>エイチ</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Vankisshu Souru Puruton Eichi Jī
-  ko: VS 플루톤HG
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 플루톤<ruby>H<rt>에이치</rt></ruby><ruby>G<rt>지</rt></ruby>
+  ko_rr: Baengkisi Soul Peulluton Heichi Ji
   zh-TW:
   zh-CN: 征服之魂 软泥骷髅HG
 text:
