--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora Pantera
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> パンテラ
   ja_romaji: Vankisshu Souru Pantera
-  ko: VS 판테라
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 판테라
+  ko_rr: Baengkisi Soul Pantera
   zh-TW:
   zh-CN: 征服之魂 豹女
 text:
