--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -10,7 +10,7 @@ name:
   ja: グラウンド・ゼノ
   ja_romaji: Guraundo Zeno
   ko: 그라운드 제노
-  ko_rr:
+  ko_rr: Geuraundeu Jeno
   zh-TW:
   zh-CN: 异度归零地
 text:
