--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ギガントザウラー
   ja_romaji: Chōetsuryū Gigantozaurā
   ko: 초월룡 기간트자우러
-  ko_rr:
+  ko_rr: Chowollyong Giganteujaureo
   zh-TW:
   zh-CN: 超越龙 巨大角龙
 text:
