--- a/data/cards/80280944.yaml
+++ b/data/cards/80280944.yaml
@@ -10,7 +10,7 @@ name:
   ja: ジャイアント・レックス
   ja_romaji: Jaianto Rekkusu
   ko: 자이언트 렉스
-  ko_rr:
+  ko_rr: Jaieonteu Rekseu
   zh-TW:
   zh-CN: 巨王棘龙
 text:
