--- a/data/cards/80811661.yaml
+++ b/data/cards/80811661.yaml
@@ -10,7 +10,7 @@ name:
   ja: ハンバーガーのレシピ
   ja_romaji: Hanbāgā no Reshipi
   ko: 햄버거 요리법
-  ko_rr:
+  ko_rr: Haembeogeo Yoribeop
   zh-TW:
   zh-CN: 汉堡的食谱
 text:
