--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -9,8 +9,8 @@ name:
   pt: Recette de Poisson (Receita de Peixe)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ<rt>ルセット・ド・ポワソン</rt></ruby>～<ruby>魚<rt>さかな</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Powason ~ Sakanaryōri no Reshipi ~
-  ko: Recette de Poisson~생선요리 요리법~
-  ko_rr:
+  ko: <ruby>Recette de Poisson<rt>흐쎄트 드 쁘아쏭</rt></ruby>~생선요리 요리법~
+  ko_rr: Heusseteu Deu Ppeuassong - Saengseon-yori Yoribeop
   zh-TW:
   zh-CN: Recette de Poisson~鱼料理的食谱~
 text:
