--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -10,7 +10,7 @@ name:
   ja: ポワレティス・ド・ヌーベルズ
   ja_romaji: Powaretisu Do Nūberuzu
   ko: 포와레티스 드 누밸즈
-  ko_rr:
+  ko_rr: Powaretiseu Deu Nubaeljeu
   zh-TW:
   zh-CN: 新式魔餐 闷煎布提斯
 text:
