--- a/data/cards/91951471.yaml
+++ b/data/cards/91951471.yaml
@@ -9,8 +9,8 @@ name:
   pt: Redemoinho da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>螺旋流辻風<rt>ダストデビル</rt></ruby>
   ja_romaji: Vankisshu Souru Dasuto Debiru
-  ko: VS 더스트데블
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 더스트데블
+  ko_rr: Baengkisi Soul Deoseuteudebeul
   zh-TW:
   zh-CN: 征服之魂 螺旋流辻风
 text:
