--- a/data/cards/93918159.yaml
+++ b/data/cards/93918159.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>翔<rt>しょう</rt></ruby>
   ja_romaji: Chōetsu Tenshō
   ko: 초월천상
-  ko_rr:
+  ko_rr: Chowolcheonsang
   zh-TW:
   zh-CN: 超越天翔
 text:
