--- a/data/cards/18511599.yaml
+++ b/data/cards/18511599.yaml
@@ -10,7 +10,7 @@ name:
   ja: エヴォルカイザー・ソルデ
   ja_romaji: Evorukaizā Sorude
   ko: 에볼카이저 소르데
-  ko_rr:
+  ko_rr: Ebolkaijeo Soreude
   zh-TW:
   zh-CN: 进化帝·索德斯龙
 text:
