--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -10,7 +10,7 @@ name:
   ja: ハングリーバーガー
   ja_romaji: Hangurī Bāgā
   ko: 헝그리 버거
-  ko_rr:
+  ko_rr: Heonggeuri Beogeo
   zh-TW:
   zh-CN: 饥饿的汉堡
 text:
