--- a/data/cards/36042004.yaml
+++ b/data/cards/36042004.yaml
@@ -10,7 +10,7 @@ name:
   ja: ベビケラサウルス
   ja_romaji: Bebikerasaurusu
   ko: 베이비 케라사우루스
-  ko_rr:
+  ko_rr: Beibi Kerasauruseu
   zh-TW:
   zh-CN: 小角龙
 text:
