--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -9,8 +9,8 @@ name:
   pt: Recette de Personnel (Receita dos Funcionários)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｅｒｓｏｎｎｅｌ<rt>ルセット・ド・ペルソネル</rt></ruby>～<ruby>賄<rt>まかな</rt></ruby>いのレシピ～
   ja_romaji: Rusetto do Perusoneru ~ Makanai no Reshipi ~
-  ko: Recette de Personnel~스태프 식사 요리법~
-  ko_rr:
+  ko: <ruby>Recette de Personnel<rt>흐쎄트 드 뻬흐쏘넬</rt></ruby>~스태프 식사 요리법~
+  ko_rr: Heusseteu Deu Ppeheussonel - Seutaepeu Siksi Yoribep
   zh-TW:
   zh-CN: Recette de Personnel~膳食的食谱~
 text:
