--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -9,8 +9,8 @@ name:
   pt: Voici la Carte (Menu do Dia)
   ja: <ruby>Ｖｏｉｃｉ ｌａ Ｃａｒｔｅ<rt>ボワシ・ラ・カルト</rt></ruby>～メニューはこちら～
   ja_romaji: Bowashi Ra Karuto ~ Menyū wa Kochira ~
-  ko: Voici la Carte~메뉴는 이쪽에~
-  ko_rr:
+  ko: <ruby>Voici la Carte<rt>브와씨 라 꺄흐트</rt></ruby>~메뉴는 이쪽에~
+  ko_rr: Beuwassi Ra Kkyaheuteu - Menyu-neun Ijjok-e
   zh-TW:
   zh-CN: Voici la Carte~请看菜单~
 text:
