--- a/data/cards/52495649.yaml
+++ b/data/cards/52495649.yaml
@@ -10,7 +10,7 @@ name:
   ja: バラムニエル・ド・ヌーベルズ
   ja_romaji: Baramunieru Do Nūberuzu
   ko: 발라무니에르 드 누밸즈
-  ko_rr:
+  ko_rr: Ballamuni-eru Deu Nubaeljeu
   zh-TW:
   zh-CN: 新式魔餐 黄油烤鱼拜朗
 text:
