--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -9,8 +9,8 @@ name:
   pt: Explosão da Trindade da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> トリニティ・バースト
   ja_romaji: Vankisshu Souru Toriniti Bāsuto
-  ko: VS 트리니티 버스트
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 트리니티 버스트
+  ko_rr: Baengkisi Soul Teuriniti Beoseuteu
   zh-TW:
   zh-CN: 征服之魂 三重爆裂
 text:
