--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora César da Calamidade
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>龍帝ノ槍<rt>カラミティ・カイザー</rt></ruby>
   ja_romaji: Vankisshu Souru Karamiti Kaizā
-  ko: VS 캘러미티 카이저
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 캘러미티 카이저
+  ko_rr: Baengkisi Soul Kaelleomiti Kaijeo
   zh-TW:
   zh-CN: 征服之魂 龙帝之枪
 text:
