--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora César Valius
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>龍帝<rt>カイザー</rt></ruby>ヴァリウス
   ja_romaji: Vankisshu Souru Kaizā Variusu
-  ko: VS 카이저 바리우스
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 카이저 바리우스
+  ko_rr: Baengkisi Soul Kaijeo Bariuseu
   zh-TW:
   zh-CN: 征服之魂 龙帝伐利乌斯
 text:
