--- a/data/cards/92895501.yaml
+++ b/data/cards/92895501.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma Aniquiladora Borguer Pesado
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ヘヴィ・ボーガー
   ja_romaji: Vankisshu Souru Hevi Bōgā
-  ko: VS 헤비 보거
-  ko_rr:
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 헤비 보거
+  ko_rr: Baengkisi Soul Hebi Bogeo
   zh-TW:
   zh-CN: 征服之魂 重型博格
 text:
