--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>グレイスザウルス
   ja_romaji: Chōetsuryū Gureisuzaurusu
   ko: 초월룡 그레이스사우루스
-  ko_rr:
+  ko_rr: Chowollyong Geureiseusauruseu
   zh-TW:
   zh-CN: 超越龙 冰川恐龙
 text:
