--- a/data/rush/18686.yaml
+++ b/data/rush/18686.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you have not activated a Spell Card.
+    During a turn you have not activated a Spell Card.
   de:
   es:
   fr:
