--- a/data/rush/yugipedia975307.yaml
+++ b/data/rush/yugipedia975307.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you have not Special Summoned a monster.
+    During a turn you have not Special Summoned a monster.
   de:
   es:
   fr:
