--- a/rush.yaml
+++ b/rush.yaml
@@ -92735,7 +92735,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you have not activated a Spell Card.
+    During a turn you have not activated a Spell Card.
   de:
   es:
   fr:
@@ -104437,7 +104437,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you have not Special Summoned a monster.
+    During a turn you have not Special Summoned a monster.
   de:
   es:
   fr:
