--- a/data/cards/01329620.yaml
+++ b/data/cards/01329620.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 크라임
   ko_rr: Tiaramencheu Keuraim
   zh-TW:
-  zh-CN: 壹世坏·让哀泪姬澄澈的残响
+  zh-CN: 泪冠哀歌・响彻的叛乱残叫
 text:
   en: |-
     When a Spell/Trap Card, or monster effect, is activated, while you control a "Tearlaments" monster or "Visas Starfrost": Negate the activation, and if you do, shuffle that card into the Deck, then send 1 monster from your hand to the GY. If this card is sent to the GY by card effect: You can target 1 of your banished "Tearlaments" monsters; add it to your hand. You can only use 1 "Tearlaments Cryme" effect per turn, and only once that turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드에 "티아라멘츠" 몬스터 또는 "비서스＝스타프로스트"가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고, 그 카드를 주인의 덱으로 되돌린다. 그 후, 자신의 패에서 몬스터 1장을 고르고 묘지로 보낸다. ②: 이 카드가 효과로 묘지로 보내졌을 경우, 제외되어 있는 자신의 "티아라멘츠" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：自己场上有「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在，怪兽的效果或魔法陷阱卡发动时可以发动。使其效果无效，使那张卡返回持有者的卡组。那之后，从自己的手牌选1只怪兽送入墓地。②：这张卡被效果送入墓地的场合，可以以除外中的自己的1只「ティアラメンツ／哀泪姬」怪兽为对象发动。将那只怪兽加入手牌。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：自己场上存在“泪冠哀歌”怪兽或“维萨思・史塔弗罗斯特”，怪兽的效果・魔法・陷阱卡发动时可以发动。将该发动无效，将该卡放回持有者的牌组。然后，从自己的手牌挑选１只怪兽送至墓地。②：此卡因效果被送至墓地的情况下，以自己１只被除外的“泪冠哀歌”怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Trap
 property: Counter
 series:
@@ -74,6 +74,11 @@ sets:
   ko:
   - set_number: POTE-KR073
     set_name: Power of the Elements
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP7-SC184
+    set_name: Mega Pack 07
     rarities:
     - Common
 limit_regulation:
