--- a/data/cards/28226490.yaml
+++ b/data/cards/28226490.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 카레이드하트
   ko_rr: Tiaramencheu Kareideuhateu
   zh-TW:
-  zh-CN: 哀泪姬主 卡雷德哈特
+  zh-CN: 泪冠哀歌・卡雷多哈忒
 text:
   en: |-
     "Tearlaments Reinoheart" + 2 Aqua monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 융합 소재로 할 수 없다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 또는 이 카드가 필드에 존재하는 상태에서, 물족 몬스터가 효과로 자신 묘지로 보내졌을 경우, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환하고, 덱에서 "티아라멘츠" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    「ティアラメンツ・レイノハート／哀泪姬主 雷诺哈特」怪兽+水族怪兽×2
-    这张卡不能作为融合素材。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合，或者这张卡在场上存在的状态下，水族怪兽被效果送入自己的墓地的场合，可以以对手场上的1张卡为对象发动。使那张卡返回持有者的卡组。②：这张卡被效果送入墓地的场合可以发动。将这张卡特殊召唤，从卡组将1张「ティアラメンツ／哀泪姬」卡送入墓地。
+    “泪冠哀歌・雷诺哈忒”＋水族怪兽×２
+    此卡不可作为融合素材。此卡名的①②效果１回合仅可各使用１次。①：此卡特殊召唤成功的情况下，或此卡存在于场上的状态下、水族怪兽因效果被送至自己墓地的情况下，以对手场上的１张卡为对象可以发动。将该卡放回持有者的牌组。②：此卡因效果被送至墓地的情况下可以发动。将此卡特殊召唤，从牌组将１张“泪冠哀歌”卡送至墓地。
 card_type: Monster
 monster_type_line: Fiend / Fusion / Effect
 attribute: DARK
@@ -106,6 +106,13 @@ sets:
     set_name: Power of the Elements +1 Bonus Pack
     rarities:
     - Ultra Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP7-SC157
+    set_name: Mega Pack 07
+    rarities:
+    - Ultra Rare
+    - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
