--- a/data/cards/37961969.yaml
+++ b/data/cards/37961969.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 허프니스
   ko_rr: Tiaramencheu Heopeuniseu
   zh-TW:
-  zh-CN: 哀泪姬 美人鱼
+  zh-CN: 泪冠哀歌・哈弗妮丝
 text:
   en: |-
     When your opponent activates a monster effect on the field (Quick Effect): You can Special Summon this card from your hand, and if you do, send the top 3 cards of your Deck to the GY. If this card is sent to the GY by card effect (except during the Damage Step): You can Fusion Summon 1 Fusion Monster from your Extra Deck, by placing Fusion Materials mentioned on it from your hand, field, and/or GY, including this card from your GY, on the bottom of the Deck in any order. You can only use each effect of "Tearlaments Havnis" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대가 필드의 몬스터의 효과를 발동했을 때에 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 자신의 덱 위에서 카드를 3장 묘지로 보낸다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 융합 몬스터 카드에 기재된, 묘지의 이 카드를 포함하는 융합 소재 몬스터를 자신의 패 / 필드 / 묘지에서 좋아하는 순서대로 주인의 덱 아래로 되돌리고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：对手场上的怪兽的效果发动时可以发动。将这张卡从手牌特殊召唤，从自己卡组上面将3张卡送入墓地。②：这张卡被效果送入墓地的场合可以发动。将融合怪兽卡规定的包含墓地的这张卡的融合素材怪兽从自己的手牌、场上或墓地按照喜欢的顺序返回持有者卡组下面，从额外卡组融合召唤那1只融合怪兽。
+    此卡名的①②效果１回合仅可各使用１次。①：对手发动场上的怪兽的效果时可以发动。从手牌将此卡特殊召唤，从自己的牌组上面将３张卡送至墓地。②：此卡因效果被送至墓地的情况下可以发动。将由融合怪兽卡决定的、包含墓地的此卡在内的融合素材怪兽从自己的手牌・场上・墓地以喜欢的顺序放回持有者的牌组下面，从额外牌组将１只该融合怪兽融合召唤。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: DARK
@@ -98,6 +98,11 @@ sets:
   ko:
   - set_number: POTE-KR013
     set_name: Power of the Elements
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP7-SC132
+    set_name: Mega Pack 07
     rarities:
     - Common
 limit_regulation:
