--- a/data/cards/38436986.yaml
+++ b/data/cards/38436986.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 메타노이즈
   ko_rr: Tiaramencheu Metanoijeu
   zh-TW:
-  zh-CN: 壹世坏·与哀泪姬擦过的爪音
+  zh-CN: 泪冠哀歌・作响的异界爪音
 text:
   en: |-
     If you control a "Tearlaments" monster or "Visas Starfrost": Target 1 face-up monster your opponent controls; change it to face-down Defense Position, then send 1 "Tearlaments" monster from your Deck to the GY. If this card is sent to the GY by card effect: You can target 1 "Tearlaments" monster in your GY; add it to your hand. You can only use 1 "Tearlaments Metanoise" effect per turn, and only once that turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드에 "티아라멘츠" 몬스터 또는 "비서스＝스타프로스트"가 존재할 경우, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 뒷면 수비 표시로 한다. 그 후, 덱에서 "티아라멘츠" 몬스터 1장을 묘지로 보낸다. ②: 이 카드가 효과로 묘지로 보내졌을 경우, 자신 묘지의 "티아라멘츠" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：自己场上有「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合，可以以对手场上的1只表侧表示怪兽为对象发动。使那只怪兽变为里侧守备表示。那之后，从卡组将1只「ティアラメンツ／哀泪姬」怪兽送入墓地。②：这张卡被效果送入墓地的场合，可以以自己墓地的1只「ティアラメンツ／哀泪姬」怪兽为对象发动。将那只怪兽加入手牌。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：自己场上存在“泪冠哀歌”怪兽或“维萨思・史塔弗罗斯特”的情况下，以对手场上的１只表侧表示怪兽为对象可以发动。将该怪兽改成里侧守备表示。然后，从牌组将１只“泪冠哀歌”怪兽送至墓地。②：此卡因效果被送至墓地的情况下，以自己墓地的１只“泪冠哀歌”怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Trap
 property: Normal
 series:
@@ -80,6 +80,11 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP7-SC182
+    set_name: Mega Pack 07
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
