--- a/data/cards/73956664.yaml
+++ b/data/cards/73956664.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 레이노하트
   ko_rr: Tiaramencheu Reinohateu
   zh-TW:
-  zh-CN: 哀泪姬主 雷诺哈特
+  zh-CN: 泪冠哀歌・雷诺哈忒
 text:
   en: |-
     If this card is Normal or Special Summoned: You can send 1 "Tearlaments" monster from your Deck to the GY, except "Tearlaments Reinoheart". If this card is sent to the GY by card effect: You can Special Summon this card (but banish it when it leaves the field), and if you do, send 1 "Tearlaments" card from your hand to the GY. You can only use each effect of "Tearlaments Reinoheart" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "티아라멘츠 레이노하트" 이외의 "티아라멘츠" 몬스터 1장을 묘지로 보낸다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환하고, 자신의 패에서 "티아라멘츠" 카드 1장을 골라 묘지로 보낸다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1只「ティアラメンツ・レイノハート／哀泪姬主 雷诺哈特」以外的「ティアラメンツ／哀泪姬」怪兽送入墓地。②：这张卡被效果送入墓地的场合可以发动。将这张卡特殊召唤，从自己的手牌选1张「ティアラメンツ／哀泪姬」卡送入墓地。用这个效果特殊召唤的这张卡从场上离开的场合除外。
+    此卡名的①②效果１回合仅可各使用１次。①：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将“泪冠哀歌・雷诺哈忒”以外的１只“泪冠哀歌”怪兽送至墓地。②：此卡因效果被送至墓地的情况下可以发动。将此卡特殊召唤，从自己的手牌挑选１张“泪冠哀歌”卡送至墓地。以此效果特殊召唤的此卡从场上离开的情况下，将其除外。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: WATER
@@ -99,6 +99,11 @@ sets:
   ko:
   - set_number: POTE-KR015
     set_name: Power of the Elements
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: MGP7-SC134
+    set_name: Mega Pack 07
     rarities:
     - Rare
 limit_regulation:
