--- a/data/cards/74920585.yaml
+++ b/data/cards/74920585.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 사리크
   ko_rr: Tiaramencheu Sarikeu
   zh-TW:
-  zh-CN: 壹世坏·为哀泪姬奏起的哀唱
+  zh-CN: 泪冠哀歌・奏鸣的摧花悲唱
 text:
   en: |-
     If you control a "Tearlaments" monster or "Visas Starfrost": You can target 1 Effect Monster your opponent controls; negate its effects, then send 1 monster you control to the GY. If this card is sent to the GY by card effect: You can add 1 "Tearlaments" monster from your Deck to your hand. You can only use each effect of "Tearlaments Sulliek" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "티아라멘츠" 몬스터 또는 "비서스＝스타프로스트"가 존재할 경우, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 무효로 한다. 그 후, 자신 필드의 몬스터 1장을 고르고 묘지로 보낸다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "티아라멘츠" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：自己场上有「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合，可以以对手场上的1只效果怪兽为对象发动。那只怪兽的效果无效。那之后，选自己场上的1只怪兽送入墓地。②：这张卡被效果送入墓地的场合可以发动。从卡组将1只「ティアラメンツ／哀泪姬」怪兽加入手牌。
+    此卡名的①②效果１回合仅可各使用１次。①：自己场上存在“泪冠哀歌”怪兽或“维萨思・史塔弗罗斯特”的情况下，以对手场上的１只效果怪兽为对象可以发动。将该怪兽的效果无效。然后，挑选自己场上的１只怪兽送至墓地。②：此卡因效果被送至墓地的情况下可以发动。从牌组将１只“泪冠哀歌”怪兽加入手牌。
 card_type: Trap
 property: Continuous
 series:
@@ -74,6 +74,11 @@ sets:
   ko:
   - set_number: POTE-KR072
     set_name: Power of the Elements
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP7-SC183
+    set_name: Mega Pack 07
     rarities:
     - Common
 limit_regulation:
