--- a/data/cards/77103950.yaml
+++ b/data/cards/77103950.yaml
@@ -12,7 +12,7 @@ name:
   ko: 일세괴＝페를레이노
   ko_rr: Ilsegoe = Pereulleino
   zh-TW:
-  zh-CN: 壹世坏=雷诺珍珠界
+  zh-CN: 壹世坏・佩尔雷诺
 text:
   en: |-
     When this card is activated: You can add 1 "Tearlaments" monster or 1 "Visas Starfrost" from your Deck to your hand. Fusion Monsters and "Tearlaments" monsters you control gain 500 ATK. If a "Tearlaments" monster(s) you control or in your GY is shuffled into the Deck or Extra Deck (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use this effect of "Primeval Planet Perlereino" once per turn. You can only activate 1 "Primeval Planet Perlereino" per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 덱에서 "티아라멘츠" 몬스터 또는 "비서스＝스타프로스트" 1장을 패에 넣을 수 있다. ②: 자신 필드의 융합 몬스터 및 "티아라멘츠" 몬스터의 공격력은 500 올린다. ③: 자신의 필드 / 묘지의 "티아라멘츠" 몬스터가 덱 / 엑스트라 덱으로 되돌아갔을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张。这个卡名的③效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从卡组将1只「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」加入手牌。②：自己场上的融合怪兽以及「ティアラメンツ／哀泪姬」怪兽的攻击力上升500。③：自己场上或墓地的「ティアラメンツ／哀泪姬」怪兽返回卡组或额外卡组的场合，可以以场上的1张卡为对象发动。将那张卡破坏。
+    此卡名的卡１回合仅可发动１张，此卡名的③效果１回合仅可使用１次。①：作为此卡发动时的效果处理，可从牌组将１只“泪冠哀歌”怪兽或“维萨思・史塔弗罗斯特”加入手牌。②：自己场上的融合怪兽及“泪冠哀歌”怪兽的攻击力上升５００。③：自己场上・墓地的“泪冠哀歌”怪兽被放回牌组・额外牌组的情况下，以场上的１张卡为对象可以发动。将该卡破坏。
 card_type: Spell
 property: Field
 series:
@@ -74,6 +74,11 @@ sets:
   ko:
   - set_number: POTE-KR060
     set_name: Power of the Elements
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: MGP7-SC173
+    set_name: Mega Pack 07
     rarities:
     - Rare
 limit_regulation:
