--- a/data/cards/92731385.yaml
+++ b/data/cards/92731385.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 키토칼로스
   ko_rr: Tiaramencheu Kitokalloseu
   zh-TW:
-  zh-CN: 哀泪姬 水仙人鱼
+  zh-CN: 泪冠哀歌・琪多卡洛斯
 text:
   en: |-
     1 "Tearlaments" monster + 1 Aqua monster
@@ -40,8 +40,8 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "티아라멘츠" 카드 1장을 고르고, 패에 넣거나 묘지로 보낸다. ②: 자신 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신의 패 / 묘지에서 "티아라멘츠" 몬스터 1장을 골라 특수 소환하고, 대상 몬스터를 묘지로 보낸다. ③: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 자신의 덱 위에서 카드를 5장 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    「ティアラメンツ／哀泪姬」怪兽+水族怪兽
-    这个卡名的①②③效果1回合各能使用1次。①：这张卡特殊召唤成功的场合可以发动。从卡组选1张「ティアラメンツ／哀泪姬」卡加入手牌或送入墓地。②：可以以自己场上的1只怪兽为对象发动。从自己的手牌或墓地选1只「ティアラメンツ／哀泪姬」怪兽特殊召唤，将对象怪兽送入墓地。③：这张卡被效果送入墓地的场合可以发动。从自己卡组上面将5张卡送入墓地。
+    “泪冠哀歌”怪兽＋水族怪兽
+    此卡名的①②③效果１回合仅可各使用１次。①：此卡特殊召唤成功的情况下可以发动。从牌组挑选１张“泪冠哀歌”卡，加入手牌或送至墓地。②：以自己场上的１只怪兽为对象可以发动。从自己的手牌・墓地挑选１只“泪冠哀歌”怪兽特殊召唤，将对象怪兽送至墓地。③：此卡因效果被送至墓地的情况下可以发动。从自己的牌组上面将５张卡送至墓地。
 card_type: Monster
 monster_type_line: Aqua / Fusion / Effect
 attribute: DARK
@@ -104,6 +104,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP7-SC156
+    set_name: Mega Pack 07
+    rarities:
+    - Common
 limit_regulation:
   tcg: Forbidden
   ocg: Forbidden
