--- a/data/cards/56099748.yaml
+++ b/data/cards/56099748.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비서스＝스타프로스트
   ko_rr: Biseoseu=Seutapeuroseuteu
   zh-TW:
-  zh-CN: 维萨斯·斯塔弗罗斯特
+  zh-CN: 维萨思・史塔弗罗斯特
 text:
   en: |-
     If this card is in your hand: You can target 1 monster you control with a different Type and Attribute than this card; destroy that monster, and if you do, Special Summon this card. You can only use this effect of "Visas Starfrost" once per turn. When this card destroys an opponent's monster by battle: You can make this card gain ATK equal to half the original ATK or DEF of that monster (whichever is higher, your choice if tied).
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재할 경우, 이 카드와는 종족과 속성이 다른 자신 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴하고, 이 카드를 특수 소환한다. ②: 이 카드가 전투로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 그 몬스터의 원래 공격력과 원래 수비력 중, 높은 쪽 수치의 절반만큼 이 카드의 공격력을 올린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①效果1回合各能使用1次。①：这张卡在手牌存在的场合，可以以与这张卡种族和属性都不同的自己场上的1只怪兽为对象发动。将那只怪兽破坏，将这张卡特殊召唤。②：这张卡用战斗将对手怪兽破坏时可以发动。这张卡的攻击力上升那只怪兽的原攻击力和原守备力之中较高方数值的一半数值。
+    此卡名的①效果１回合仅可使用１次。①：在此卡存在于手牌中的情况下，以自己场上的１只种族和属性与此卡不同的怪兽为对象可以发动。将该怪兽破坏，将此卡特殊召唤。②：此卡战斗破坏对手怪兽时可以发动。此卡的攻击力上升相当于该怪兽原本攻击力和原本守备力中较高一方的一半数值。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: LIGHT
@@ -133,6 +133,13 @@ sets:
     set_name: Dimension Force +1 Bonus Pack
     rarities:
     - Super Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP7-SC070
+    set_name: Mega Pack 07
+    rarities:
+    - Super Rare
+    - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
