--- a/data/cards/21570001.yaml
+++ b/data/cards/21570001.yaml
@@ -12,7 +12,7 @@ name:
   ko: 뉴 클리어 월드
   ko_rr: Nyu Keulli-eo Woldeu
   zh-TW:
-  zh-CN: 新世坏
+  zh-CN: 新世坏界
 text:
   en: |-
     Target 1 face-up monster you control; destroy it, and if you do, Special Summon 1 monster from your Deck in Defense Position, with a different original Type and Attribute, whose Level is lower than that monster's original Level, but negate its effects. You can only activate 1 "Clear New World" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴하고, 그 몬스터와는 원래의 종족 / 속성이 다르며, 그 몬스터의 원래 레벨보다 낮은 레벨을 가지는 몬스터 1장을 덱에서 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：以自己场上1只表侧表示怪兽为对象才能发动。那只怪兽破坏，和那只怪兽是原本的种族·属性不同并持有比那只怪兽的原本等级低的等级的1只怪兽从卡组守备表示特殊召唤。这个效果特殊召唤的怪兽的效果无效化。
+    此卡名的卡１回合仅可发动１张。①：以自己场上的１只表侧表示怪兽为对象可以发动。将该怪兽破坏，将１只原本种族・属性与该怪兽不同，且等级低于该怪兽原本等级的怪兽从牌组以守备表示特殊召唤。以此效果特殊召唤的怪兽的效果无效化。
 card_type: Spell
 property: Normal
 images:
@@ -75,6 +74,11 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP7-SC047
+    set_name: Mega Pack 07
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
