--- a/rush.yaml
+++ b/rush.yaml
@@ -105490,3 +105490,58 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Card Game Gum
     rarities:
 yugipedia_page_id: 992240
+---
+konami_id:
+name:
+  en: Galacterial Ore
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギャラクテリアル・オーア
+  ja_romaji: Gyarakuteriaru Ōa
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 3 or more Galaxy Type monsters in your Graveyard during your Main Phase this card was Normal or Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Galactica Xiphos" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 1000
+def: 1300
+images:
+- index: 1
+  image: GalacterialOre-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP038
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 992642
