--- a/rush.yaml
+++ b/rush.yaml
@@ -99260,7 +99260,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, this card gains ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
+    Send the top 3 cards of your Deck to the Graveyard. This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, you can make this card gain ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
