--- a/data/cards/05182107.yaml
+++ b/data/cards/05182107.yaml
@@ -1,7 +1,7 @@
 konami_id: 18657
 password: 5182107
 name:
-  en: Superheavy Samurai Constable
+  en: Superheavy Samurai Security
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 超重武者 同心C-N
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 face-up Machine Pendulum Monster from your Extra Deck to your hand. If you have no Spells/Traps in your GY: You can Tribute this card; Special Summon 1 EARTH Machine monster with 1500 or less ATK from your hand or GY, except "Superheavy Samurai Constable". You can only use each effect of "Superheavy Samurai Constable" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 face-up Machine Pendulum Monster from your Extra Deck to your hand. If you have no Spells/Traps in your GY: You can Tribute this card; Special Summon 1 EARTH Machine monster with 1500 or less ATK from your hand or GY, except "Superheavy Samurai Security". You can only use each effect of "Superheavy Samurai Security" once per turn.
   de:
   es:
   fr:
@@ -37,8 +37,28 @@ series:
 - Superheavy Samurai
 images:
 - index: 1
-  image: SuperheavySamuraiConstable-VJMP-JP-UR.png
+  image: SuperheavySamuraiSecurity-VJMP-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN0??
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE0??
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR0??
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT0??
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT0??
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: VJMP-JP229
     set_name: V Jump March 2023 promotional card
