--- a/data/cards/44094981.yaml
+++ b/data/cards/44094981.yaml
@@ -39,6 +39,7 @@ def: 1500
 materials: 1 DARK Tuner + 1 or more non-Tuner monsters
 series:
 - Earthbound
+- Earthbound Servant
 images:
 - index: 1
   image: EarthboundServantGeoGryphon-AC03-JP-NPR.png
