--- a/data/cards/71101678.yaml
+++ b/data/cards/71101678.yaml
@@ -39,6 +39,7 @@ def: 1800
 materials: 1 "Earthbound" Fusion Monster + 1 "Earthbound" Synchro Monster
 series:
 - Earthbound
+- Earthbound Servant
 images:
 - index: 1
   image: EarthboundServantGeoGrasha-AC03-JP-UR.png
