--- a/data/cards/yugipedia992667.yaml
+++ b/data/cards/yugipedia992667.yaml
@@ -35,6 +35,7 @@ def: 1000
 materials: 1 "Earthbound" monster + 1 DARK monster
 series:
 - Earthbound
+- Earthbound Servant
 images:
 - index: 1
   image: EarthboundServantGeoGremlina-AGOV-JP-OP.png
