--- a/data/cards/08690387.yaml
+++ b/data/cards/08690387.yaml
@@ -42,6 +42,7 @@ def: 1000
 materials: 1 DARK Tuner + 1 or more non-Tuner monsters
 series:
 - Earthbound
+- Earthbound Servant
 images:
 - index: 1
   image: EarthboundServantGeoGremlin-AC03-JP-NPR.png
