--- a/data/cards/45716579.yaml
+++ b/data/cards/45716579.yaml
@@ -39,6 +39,7 @@ def: 1200
 materials: 2 "Earthbound" monsters
 series:
 - Earthbound
+- Earthbound Servant
 images:
 - index: 1
   image: EarthboundServantGeoKraken-AC03-JP-SR.png
