--- a/data/cards/63995093.yaml
+++ b/data/cards/63995093.yaml
@@ -8,7 +8,7 @@ name:
   it: Duplicazione di Macchine
   pt: Duplicação de Maquinas
   ja: <ruby>機<rt>き</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>複<rt>ふく</rt></ruby><ruby>製<rt>せい</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Kikai Fukusei Jutsu
+  ja_romaji: Kikai Fukuseijutsu
   ko: 기계 복제술
   ko_rr: Gigye Bokjesul
   zh-TW: 機械複製術
