--- a/data/cards/yugipedia992697.yaml
+++ b/data/cards/yugipedia992697.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 冥骸合竜－メメントラル・テクトリカ
-  ja_romaji:
+  ja: <ruby>冥<rt>めい</rt></ruby><ruby>骸<rt>がい</rt></ruby><ruby>合<rt>ごう</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>－メメントラル・テクトリカ
+  ja_romaji: Meigaigōryū - Mementoraru Tekutorika
   ko:
   ko_rr:
   zh-TW:
