--- a/data/cards/17626381.yaml
+++ b/data/cards/17626381.yaml
@@ -206,6 +206,9 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Common
+  - set_number: DBVS-JP014
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: ST14-KR022
     set_name: Starter Deck 2014
