--- a/data/cards/23076639.yaml
+++ b/data/cards/23076639.yaml
@@ -40,8 +40,33 @@ images:
 - index: 1
   image: GazelletheKingofMythicalClaws-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN003
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE003
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR003
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT003
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT003
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP003
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR003
     set_name: Duelist Nexus
     rarities:
     - Common
