--- a/data/cards/28954097.yaml
+++ b/data/cards/28954097.yaml
@@ -1,21 +1,21 @@
 konami_id: 18793
 password: 28954097
 name:
-  en: Mirror Swordsman
+  en: Mirror Swordknight
   de:
   es:
   fr:
   it:
   pt:
   ja: ミラー ソードナイト
-  ja_romaji: Mirā Sōdo Naito
+  ja_romaji: Mirā Sōdonaito
   ko: 미러 스워드나이트
   ko_rr:
   zh-TW:
   zh-CN: 镜剑骑士
 text:
   en: |-
-    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Mirror Swordsman" once per turn. (Quick Effect): You can Tribute this card; Special Summon 1 monster that mentions "Chimera Fusion" from your Deck, except "Mirror Swordsman". When your opponent activates a monster effect on the field while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Mirror Swordknight" once per turn. (Quick Effect): You can Tribute this card; Special Summon 1 monster from your Deck that mentions "Chimera Fusion", except "Mirror Swordknight". When a monster your opponent controls activates its effect, while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect.
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Chimera
 images:
 - index: 1
-  image: MirrorSwordsman-DUNE-JP-C.png
+  image: MirrorSwordknight-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN006
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE006
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR006
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT006
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT006
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP006
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR006
     set_name: Duelist Nexus
     rarities:
     - Common
