--- a/data/cards/55461744.yaml
+++ b/data/cards/55461744.yaml
@@ -1,7 +1,7 @@
 konami_id: 18791
 password: 55461744
 name:
-  en: Berfomet the Great Wings
+  en: Big-Winged Berfomet
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 大翼之巴风特
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Level 4 Beast monster and/or 1 "Chimera Fusion" from your Deck to your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion Monsters. If this card is sent to the GY as material for a Fusion Summon: You can target 1 Illusion monster in your GY; Special Summon it. You can only use each effect of "Berfomet the Great Wings" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Level 4 Beast monster and/or 1 "Chimera Fusion" from your Deck to your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion Monsters. If this card is sent to the GY as material for a Fusion Summon: You can target 1 Illusion monster in your GY; Special Summon it. You can only use each effect of "Big-Winged Berfomet" once per turn.
   de:
   es:
   fr:
@@ -38,8 +38,28 @@ series:
 - Chimera
 images:
 - index: 1
-  image: BerfomettheGreatWings-DUNE-JP-SR.png
+  image: BigWingedBerfomet-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN004
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE004
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR004
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT004
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT004
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP004
     set_name: Duelist Nexus
@@ -48,6 +68,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP004
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR004
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR004
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
