--- a/data/cards/60283232.yaml
+++ b/data/cards/60283232.yaml
@@ -41,8 +41,33 @@ images:
 - index: 1
   image: WheelSynchron-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN001
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE001
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR001
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT001
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT001
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP001
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR001
     set_name: Duelist Nexus
     rarities:
     - Common
