--- a/data/cards/92565383.yaml
+++ b/data/cards/92565383.yaml
@@ -1,7 +1,7 @@
 konami_id: 18792
 password: 92565383
 name:
-  en: Cornfield Koator
+  en: Cornfield Coatl
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 玉米田羽蛇神
 text:
   en: |-
-    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Cornfield Koator" once per turn. You can discard this card; add 1 monster that mentions "Chimera Fusion" from your Deck to your hand, except "Cornfield Koator". When your opponent activates a card or effect that targets a card(s) you control while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect, and if you do, destroy that card.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Cornfield Coatl" once per turn. You can discard this card; add 1 monster that mentions "Chimera Fusion" from your Deck to your hand, except "Cornfield Coatl". When your opponent activates a card or effect that targets a card(s) you control, while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect, and if you do, destroy that card.
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Chimera
 images:
 - index: 1
-  image: CornfieldKoator-DUNE-JP-C.png
+  image: CornfieldCoatl-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN005
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE005
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR005
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT005
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT005
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP005
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR005
     set_name: Duelist Nexus
     rarities:
     - Common
