--- a/data/cards/01769875.yaml
+++ b/data/cards/01769875.yaml
@@ -1,7 +1,7 @@
 konami_id: 18820
 password: 1769875
 name:
-  en: Chimera the Phantom Beast King
+  en: Chimera the King of Phantom Beasts
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Beast monster + 1 Fiend monster
-    This card's name becomes "Chimera the Flying Mythical Beast" while on the field or in the GY, but is still treated as a "Phantom Beast" card. You can only use each of the following effects of "Chimera the Phantom Beast King" once per turn. If this card is Fusion Summoned: You can activate this effect; during the End Phase of this turn, send 1 random card from your opponent's hand to the GY. During your opponent's turn (Quick Effect): You can banish this card from your GY, then target 1 Beast, Fiend, or Illusion monster in your GY; Special Summon it.
+    This card's name becomes "Chimera the Flying Mythical Beast" while on the field or in the GY. You can only use each of the following effects of "Chimera the King of Phantom Beasts" once per turn. If this card is Fusion Summoned: You can activate this effect; send 1 random card from your opponent's hand to the GY during the End Phase of this turn. During your opponent's turn (Quick Effect): You can banish this card from your GY, then target 1 Beast, Fiend, or Illusion monster in your GY; Special Summon it.
   de:
   es:
   fr:
@@ -44,8 +44,38 @@ series:
 - Phantom Beast
 images:
 - index: 1
-  image: ChimerathePhantomBeastKing-DUNE-JP-UR.png
+  image: ChimeratheKingofPhantomBeasts-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP033
     set_name: Duelist Nexus
@@ -55,6 +85,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP033
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR033
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR033
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
