--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 团结与牵绊之魔导师
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by having 25 or more cards in your GY. Gains 2500 ATK/DEF while your opponent has 25 or more cards in their GY.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by having 25 or more cards in your GY. While your opponent has 25 or more cards in their GY, this card gains 2500 ATK/DEF.
   de:
   es:
   fr:
@@ -38,9 +38,95 @@ images:
 - index: 1
   image: MagiciansofBondsandUnity-DUNE-JP-QCScR.png
 sets:
+  en:
+  - set_number: DUNE-EN000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-EN000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-EN000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-DE000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-DE000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-FR000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-FR000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-IT000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-IT000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-PT000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-PT000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP000
     set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-JP000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-JP000
+    set_name: Phantom Nightmare
+    rarities:
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR000
+    set_name: Duelist Nexus
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: AGOV-KR000
+    set_name: Age of Overlord
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-KR000
+    set_name: Phantom Nightmare
     rarities:
     - Quarter Century Secret Rare
 limit_regulation:
