--- a/data/cards/25807544.yaml
+++ b/data/cards/25807544.yaml
@@ -1,7 +1,7 @@
 konami_id: 18844
 password: 25807544
 name:
-  en: The Noble Arms Museum
+  en: Noble Arms Museum
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 大圣剑博物馆
 text:
   en: |-
-    FIRE Warrior monsters you control gain 500 ATK. Once per turn: You can pay 1200 LP; add 1 "Noble Arms" card from your Deck to your hand, except "The Noble Arms Museum". Once per turn, if this effect was applied this turn: You can target 1 "Noble Knight" Monster Card in your Spell & Trap Zone; Special Summon it, also, if you did not control "Infernoble Knight Emperor Charles" at activation, you cannot Special Summon monsters for the rest of this turn, except Warrior monsters.
+    All FIRE Warrior monsters you control gain 500 ATK. Once per turn: You can pay 1200 LP; add 1 "Noble Arms" card from your Deck to your hand, except "Noble Arms Museum". Once per turn, if the previous effect was applied this turn: You can target 1 "Noble Knight" Monster Card in your Spell & Trap Zone; Special Summon it, also, if you activated this effect while you did not control "Infernoble Knight Emperor Charles", you cannot Special Summon monsters for the rest of this turn, except Warrior monsters.
   de:
   es:
   fr:
@@ -34,10 +34,45 @@ series:
 - Noble Arms
 images:
 - index: 1
-  image: TheNobleArmsMuseum-DUNE-JP-C.png
+  image: NobleArmsMuseum-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN057
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE057
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR057
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT057
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT057
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP057
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR057
     set_name: Duelist Nexus
     rarities:
     - Common
