--- a/data/cards/61470213.yaml
+++ b/data/cards/61470213.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ "Altergeist" monsters
-    If this card is Link Summoned: You can Set 1 "Altergeist" Trap directly from your Deck. Once while face-up on the field, during the Main Phase (Quick Effect): You can send 1 card you control to the GY, then target 1 Effect Monster your opponent controls; take control of that target, and if you do, it is also treated as an "Altergeist" monster. You can only use each effect of "Altergeist Adminia" once per turn.
+    If this card is Link Summoned: You can Set 1 "Altergeist" Trap directly from your Deck. Once while this card is face-up on the field, during the Main Phase (Quick Effect): You can send 1 card you control to the GY, then target 1 Effect Monster your opponent controls; take control of that target, and if you do, it is also treated as an "Altergeist" monster. You can only use each effect of "Altergeist Adminia" once per turn.
   de:
   es:
   fr:
@@ -48,6 +48,36 @@ images:
 - index: 1
   image: AltergeistAdminia-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN047
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE047
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR047
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT047
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT047
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP047
     set_name: Duelist Nexus
@@ -56,6 +86,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP047
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR047
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR047
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
