--- a/data/cards/97682931.yaml
+++ b/data/cards/97682931.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you would Synchro Summon a "Power Tool" Synchro Monster, or a Level 7 or 8 Dragon Synchro Monster, this card in your hand can also be used as material. You can only use this effect of "Revolution Synchron" once per turn. If this card is in your GY and you control a Level 7 or higher Synchro Monster: You can send the top card of your Deck to the GY, and if you do, Special Summon this card, but its Level becomes 1. You can only use this effect of "Revolution Synchron" once per Duel.
+    If you Synchro Summon a "Power Tool" monster or a Level 7 or 8 Dragon monster, this card in your hand can also be used as material. You can only use this effect of "Revolution Synchron" once per turn. If you control a Level 7 or higher Synchro Monster while this card is in your GY: You can send the top card of your Deck to the GY, and if you do, Special Summon this card, also its Level becomes 1. You can only use this effect of "Revolution Synchron" once per Duel.
   de:
   es:
   fr:
@@ -40,8 +40,43 @@ images:
 - index: 1
   image: RevolutionSynchron-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN002
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE002
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR002
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT002
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT002
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP002
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR002
     set_name: Duelist Nexus
     rarities:
     - Rare
