--- a/data/cards/97864322.yaml
+++ b/data/cards/97864322.yaml
@@ -1,7 +1,7 @@
 konami_id: 18835
 password: 97864322
 name:
-  en: Charlemagne
+  en: Emperor Charles the Great
   de:
   es:
   fr:
@@ -15,8 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    1 Level 9 "Infernoble Knight Emperor Charles" equipped with an Equip Card
-    If this card is Link Summoned: You can target 1 "Infernoble Knight Emperor Charles" in your GY; this card's name becomes that monster's original name, and replace this effect with that monster's original effects, then equip it to this card as an Equip Spell that gives it 500 ATK. Once per turn, when a Spell/Trap Card or effect is activated (Quick Effect): You can send 1 Equip Spell from your hand or face-up field to the GY; negate the activation, and if you do, destroy that card.
+    1 Level 9 "Infernoble Knight Emperor Charles" equipped with an Equip Card(s)
+    If this card is Link Summoned: You can target 1 "Infernoble Knight Emperor Charles" in your GY; this card's name becomes that target's original name, and it gains that target's original effects, then equip that target to this card as an Equip Spell that gives it 500 ATK. Once per turn, when a Spell/Trap Card or effect is activated (Quick Effect): You can send 1 Equip Spell from your hand or face-up field to the GY; negate the activation, and if you do, destroy that card.
   de:
   es:
   fr:
@@ -39,8 +39,38 @@ atk: 3000
 materials: 1 Level 9 "Infernoble Knight Emperor Charles" equipped with an Equip Card
 images:
 - index: 1
-  image: Charlemagne-DUNE-JP-UR.png
+  image: EmperorCharlestheGreat-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP048
     set_name: Duelist Nexus
@@ -50,6 +80,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP048
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR048
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR048
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
