--- a/data/cards/98319530.yaml
+++ b/data/cards/98319530.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 『焰圣剑－阿尔玛斯』
 text:
   en: |-
-    While this card is equipped to a monster: You can equip 1 "Infernoble Arms" Equip Spell from your Deck or GY to 1 appropriate monster you control, except ""Infernoble Arms - Almace"", then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 of your FIRE Warrior monsters that is banished or in your GY; add it to your hand. You can only use 1 ""Infernoble Arms - Almace"" effect per turn, and only once that turn.
+    While this card is equipped to a monster: You can equip 1 "Infernoble Arms" Equip Spell from your Deck or GY, except ""Infernoble Arms - Almace"", to 1 appropriate monster you control, then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 of your FIRE Warrior monsters that is banished or in your GY; add it to your hand. You can only use 1 ""Infernoble Arms - Almace"" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -37,6 +37,36 @@ images:
 - index: 1
   image: InfernobleArmsAlmace-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN056
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE056
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR056
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT056
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT056
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP056
     set_name: Duelist Nexus
@@ -45,6 +75,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP056
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR056
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR056
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
