--- a/data/cards/39191307.yaml
+++ b/data/cards/39191307.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Mascherato
   pt: Dragão Mascarado
   ja: <ruby>仮面竜<rt>マスクド・ドラゴン</rt></ruby>
-  ja_romaji: Masukudo Duragon
+  ja_romaji: Masukudo Doragon
   ko: 가면룡
   ko_rr: Gamyeonnyong
   zh-TW:
