--- a/data/cards/53087962.yaml
+++ b/data/cards/53087962.yaml
@@ -80,6 +80,7 @@ sets:
     set_name: 'Deck Build Pack: Ancient Guardians'
     rarities:
     - Ultra Rare
+    - Secret Rare
   - set_number: 23TP-JP212
     set_name: Tournament Pack 2023 Vol.2
     rarities:
