--- a/data/cards/yugipedia992828.yaml
+++ b/data/cards/yugipedia992828.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>王<rt>おう</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: En'ō no Sei'iki
+  ja_romaji: En'ō no Seiiki
   ko:
   ko_rr:
   zh-TW:
