--- a/data/cards/58712976.yaml
+++ b/data/cards/58712976.yaml
@@ -8,7 +8,7 @@ name:
   it: Fiamma Infernale Vixen
   pt: Megera da Chama Infernal
   ja: ヘルフレイムゴースト
-  ja_romaji: Heru Fureimu Gōsuto
+  ja_romaji: Herufureimu Gōsuto
   ko: 헬프레임 고스트
   ko_rr:
   zh-TW: 獄火幽靈
