--- a/data/cards/63136489.yaml
+++ b/data/cards/63136489.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN: 合成兽融合
 text:
   en: |-
-    During the Main Phase: Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material, including a Beast or Fiend monster. During your Main Phase, if this card in your GY and you have "Chimera the Flying Mythical Beast" on your field or in your GY: You can activate 1 of these effects;
+    During the Main Phase: Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a Beast or Fiend monster. During your Main Phase, if this card in your GY and you have "Chimera the Flying Mythical Beast" on your field or in your GY: You can activate 1 of these effects;
     ● Add this card to your hand.
-    ● Banish this card, and if you do, Special Summon 1 "Gazelle the King of Mythical Beasts" and 1 "Berfomet" from your Deck and/or GY.
+    ● Banish this card, and if you do, Special Summon both 1 "Gazelle the King of Mythical Beasts" and 1 "Berfomet" from your Deck and/or GY.
     You can only use this effect of "Chimera Fusion" once per turn.
   de:
   es:
@@ -40,8 +40,33 @@ images:
 - index: 1
   image: ChimeraFusion-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN052
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE052
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR052
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT052
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT052
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP052
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR052
     set_name: Duelist Nexus
     rarities:
     - Rare
