--- a/data/cards/61070601.yaml
+++ b/data/cards/61070601.yaml
@@ -1,7 +1,7 @@
 konami_id: 18848
 password: 61070601
 name:
-  en: Fusion Reinforcement
+  en: Fusion Armament
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Reveal 1 Fusion Monster in your Extra Deck and Special Summon 1 of the Fusion Materials mentioned on it from your Extra Deck or GY, but until the end of your opponent's turn, it cannot attack, also its effects are negated. You can only activate 1 "Fusion Reinforcement" per turn.
+    Reveal 1 Fusion Monster in your Extra Deck, and Special Summon 1 of the Fusion Materials whose name is mentioned on that monster from your Extra Deck or GY, but until the end of your opponent's turn, it cannot attack and its effects (if any) are negated. You can only activate 1 "Fusion Armament" per turn.
   de:
   es:
   fr:
@@ -33,8 +33,38 @@ series:
 - Polymerization
 images:
 - index: 1
-  image: FusionReinforcement-DUNE-JP-SR.png
+  image: FusionArmament-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN061
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE061
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR061
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT061
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT061
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP061
     set_name: Duelist Nexus
@@ -43,6 +73,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP061
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR061
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR061
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
