--- a/data/cards/85520170.yaml
+++ b/data/cards/85520170.yaml
@@ -1,7 +1,7 @@
 konami_id: 18855
 password: 85520170
 name:
-  en: Scrap-Iron Idol
+  en: Scrap-Iron Sacred Statue
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 of your Level 7 or 8 Dragon Synchro Monsters that is banished or in your GY; Special Summon it (but return it to the Extra Deck during the End Phase), also, after that, Set this card face-down instead of sending it to the GY. If this Set card in its owner's control is destroyed by an opponent's card effect: You can Special Summon 1 "Crimson Dragon" from your Extra Deck. You can only use each effect of "Scrap-Iron Idol" once per turn.
+    Target 1 of your Level 7 or 8 Dragon Synchro Monsters that is banished or in your GY; Special Summon it, but return it to the Extra Deck during the End Phase, also, after that, Set this card face-down instead of sending it to the GY. If this Set card in its owner's control is destroyed by an opponent's card effect: You can Special Summon 1 "Crimson Dragon" from your Extra Deck. You can only use each effect of "Scrap-Iron Sacred Statue" once per turn.
   de:
   es:
   fr:
@@ -33,10 +33,35 @@ series:
 - Scrap-Iron
 images:
 - index: 1
-  image: ScrapIronIdol-DUNE-JP-C.png
+  image: ScrapIronSacredStatue-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN068
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE068
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR068
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT068
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT068
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP068
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR068
     set_name: Duelist Nexus
     rarities:
     - Common
