--- a/data/cards/91262474.yaml
+++ b/data/cards/91262474.yaml
@@ -40,6 +40,26 @@ images:
 - index: 1
   image: StardustWurm-VX02-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN094
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE094
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR094
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT094
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT094
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: VX02-JP002
     set_name: The Valuable Book EX 2 promotional cards
