--- a/data/cards/97474300.yaml
+++ b/data/cards/97474300.yaml
@@ -34,8 +34,33 @@ images:
 - index: 1
   image: DuelistGenesis-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN062
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE062
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR062
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT062
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT062
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP062
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR062
     set_name: Duelist Nexus
     rarities:
     - Rare
