--- a/data/cards/00653675.yaml
+++ b/data/cards/00653675.yaml
@@ -1,7 +1,7 @@
 konami_id: 18837
 password: 653675
 name:
-  en: Synchro Over Top
+  en: Synchro Overtop
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 同调凌驾
 text:
   en: |-
-    Target any number of Level 7 and/or 8 Dragon Synchro Monsters in your GY; Special Summon them in Defense Position, but their Levels become 1, their effects are negated, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. When your Synchro Monster is destroyed by battle: You can banish this card from your GY; Special Summon 1 "Crimson Dragon" from your Extra Deck. You can only use each effect of "Synchro Over Top" once per turn.
+    Target any number of Level 7 or 8 Dragon Synchro Monsters in your GY; Special Summon them in Defense Position, but their Levels become 1 and their effects are negated, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. When a Synchro Monster you control is destroyed by battle: You can banish this card from your GY; Special Summon 1 "Crimson Dragon" from your Extra Deck. You can only use each effect of "Synchro Overtop" once per turn.
   de:
   es:
   fr:
@@ -34,10 +34,35 @@ series:
 - Synchro
 images:
 - index: 1
-  image: SynchroOverTop-DUNE-JP-R.png
+  image: SynchroOvertop-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN050
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE050
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR050
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT050
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT050
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP050
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR050
     set_name: Duelist Nexus
     rarities:
     - Rare
