--- a/data/cards/37442336.yaml
+++ b/data/cards/37442336.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner Synchro Monster + 2+ non-Tuner Synchro Monsters
-    Must first be Synchro Summoned with the above Synchro Materials. Once per turn: You can target face-up cards on the field, up to the number of monsters used as Synchro Material for this card + 1; negate their effects. This effect's activation and effect cannot be negated. (Quick Effect): You can banish this Synchro Summoned card; Special Summon 1 Dragon Synchro Monster from your Extra Deck that lists 2 or more non-Tuner Synchro Monsters as material. (This is treated as a Synchro Summon.)
+    Must first be Synchro Summoned with the above materials. Once per turn: You can target face-up cards on the field, up to the number of monsters used as Synchro Material for this card + 1; negate their effects. This effect's activation and effect cannot be negated. (Quick Effect): You can banish this Synchro Summoned card; Special Summon 1 Dragon Synchro Monster from your Extra Deck that requires 2+ non-Tuner Synchro Monsters as material. (This is treated as a Synchro Summon.)
   de:
   es:
   fr:
@@ -45,6 +45,36 @@ images:
 - index: 1
   image: CosmicQuasarDragon-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP037
     set_name: Duelist Nexus
@@ -54,6 +84,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP037
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR037
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR037
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
