--- a/data/cards/60577362.yaml
+++ b/data/cards/60577362.yaml
@@ -8,7 +8,7 @@ name:
   it: Occhio Dominatore
   pt: Olho Esmagador
   ja: <ruby>威<rt>い</rt></ruby><ruby>圧<rt>あつ</rt></ruby>する<ruby>魔<rt>ま</rt></ruby><ruby>眼<rt>がん</rt></ruby>
-  ja_romaji: Iatsu-suru Magan
+  ja_romaji: Iatsusuru Magan
   ko: 위압하는 마안
   ko_rr: Wiapha-neun Ma-an
   zh-TW:
