--- a/data/cards/48386462.yaml
+++ b/data/cards/48386462.yaml
@@ -1,7 +1,7 @@
 konami_id: 18818
 password: 48386462
 name:
-  en: Singing Cuckoo
+  en: The Cuckoo Commanded to Croon
   de:
   es:
   fr:
@@ -19,7 +19,7 @@ text:
     ● Destroy this card, then draw 1 card.
     ● Discard 1 card, then draw 1 card.
     ● During the End Phase of this turn, draw 1 card.
-    You can only use this effect of "Singing Cuckoo" once per turn.
+    You can only use this effect of "The Cuckoo Commanded to Croon" once per turn.
   de:
   es:
   fr:
@@ -49,10 +49,35 @@ atk: 800
 def: 1000
 images:
 - index: 1
-  image: SingingCuckoo-DUNE-JP-NR.png
+  image: TheCuckooCommandedtoCroon-DUNE-JP-NR.png
 sets:
+  en:
+  - set_number: DUNE-EN031
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE031
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR031
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT031
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT031
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP031
+    set_name: Duelist Nexus
+    rarities:
+    - Normal Rare
+  ko:
+  - set_number: DUNE-KR031
     set_name: Duelist Nexus
     rarities:
     - Normal Rare
