--- a/data/cards/50357013.yaml
+++ b/data/cards/50357013.yaml
@@ -1,7 +1,7 @@
 konami_id: 18851
 password: 50357013
 name:
-  en: Mirror Formation of the Ten Sacred Treasures
+  en: Tokusano Shinkyojin
   de:
   es:
   fr:
@@ -32,8 +32,28 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: MirrorFormationoftheTenSacredTreasures-DUNE-JP-SR.png
+  image: TokusanoShinkyojin-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN064
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE064
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR064
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT064
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT064
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP064
     set_name: Duelist Nexus
@@ -42,6 +62,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP064
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR064
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR064
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
