--- a/data/cards/59131526.yaml
+++ b/data/cards/59131526.yaml
@@ -1,7 +1,7 @@
 konami_id: 18854
 password: 59131526
 name:
-  en: Aqua Round
+  en: Aqua Chorus Round
   de:
   es:
   fr:
@@ -32,10 +32,35 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: AquaRound-DUNE-JP-NR.png
+  image: AquaChorusRound-DUNE-JP-NR.png
 sets:
+  en:
+  - set_number: DUNE-EN067
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE067
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR067
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT067
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT067
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP067
+    set_name: Duelist Nexus
+    rarities:
+    - Normal Rare
+  ko:
+  - set_number: DUNE-KR067
     set_name: Duelist Nexus
     rarities:
     - Normal Rare
