--- a/data/cards/67853262.yaml
+++ b/data/cards/67853262.yaml
@@ -1,7 +1,7 @@
 konami_id: 18662
 password: 67853262
 name:
-  en: Saincred Magician
+  en: Magician of Faithfulness
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 崇高神圣魔术师
 text:
   en: |-
-    FLIP: You can target 1 Spell in your GY; add it to your hand, then you can Special Summon 1 "Magician of Faith" or "Saincred Magician" from your Deck in face-down Defense Position. You can only use this effect of "Saincred Magician" once per turn.
+    FLIP: You can target 1 Spell in your GY; add it to your hand, then you can Special Summon 1 "Magician of Faith" or "Magician of Faithfulness" from your Deck in face-down Defense Position. You can only use this effect of "Magician of Faithfulness" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ atk: 600
 def: 800
 images:
 - index: 1
-  image: SaincredMagician-VJMP-JP-UR.png
+  image: MagicianofFaithfulness-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP230
