--- a/data/cards/88346805.yaml
+++ b/data/cards/88346805.yaml
@@ -1,7 +1,7 @@
 konami_id: 18867
 password: 88346805
 name:
-  en: Kiriban
+  en: You're Finished
   de:
   es:
   fr:
@@ -34,10 +34,35 @@ series:
 - Trap Monster
 images:
 - index: 1
-  image: Kiriban-DUNE-JP-NR.png
+  image: YoureFinished-DUNE-JP-NR.png
 sets:
+  en:
+  - set_number: DUNE-EN080
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE080
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR080
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT080
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT080
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP080
+    set_name: Duelist Nexus
+    rarities:
+    - Normal Rare
+  ko:
+  - set_number: DUNE-KR080
     set_name: Duelist Nexus
     rarities:
     - Normal Rare
