--- a/data/cards/89569453.yaml
+++ b/data/cards/89569453.yaml
@@ -1,7 +1,7 @@
 konami_id: 18864
 password: 89569453
 name:
-  en: Wipeout Trap Hole
+  en: Banishing Trap Hole
   de:
   es:
   fr:
@@ -34,10 +34,35 @@ series:
 - Trap Hole
 images:
 - index: 1
-  image: WipeoutTrapHole-DUNE-JP-R.png
+  image: BanishingTrapHole-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN077
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE077
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR077
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT077
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT077
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP077
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR077
     set_name: Duelist Nexus
     rarities:
     - Rare
