--- a/data/cards/96352712.yaml
+++ b/data/cards/96352712.yaml
@@ -1,7 +1,7 @@
 konami_id: 18852
 password: 96352712
 name:
-  en: Egomorph
+  en: Overexaggeration
   de:
   es:
   fr:
@@ -19,7 +19,7 @@ text:
     ● Change the attacking monster to Defense Position.
     ● Return the attack target to the hand.
     ● Destroy both battling monsters.
-    You can only activate 1 "Egomorph" per turn.
+    You can only activate 1 "Overexaggeration" per turn.
   de:
   es:
   fr:
@@ -45,10 +45,35 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: Egomorph-DUNE-JP-C.png
+  image: Overexaggeration-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN065
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE065
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR065
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT065
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT065
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP065
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR065
     set_name: Duelist Nexus
     rarities:
     - Common
