--- a/data/cards/34481518.yaml
+++ b/data/cards/34481518.yaml
@@ -1,7 +1,7 @@
 konami_id: 18833
 password: 34481518
 name:
-  en: Grenosaurus the Magic-Head Cannon
+  en: Grenosaurus Giga-Cannon
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    When your Dinosaur monster destroys an opponent's monster by battle and sends it to the GY: You can detach 1 material from this card; inflict 1000 damage to your opponent, then this card gains 1000 ATK. If this Xyz Summoned card is destroyed: You can target 1 card on the field; destroy it, and if you do, inflict 1000 damage to your opponent. You can only use this effect of "Grenosaurus the Magic-Head Cannon" once per turn.
+    When your Dinosaur monster destroys an opponent's monster by battle and sends it to the GY: You can detach 1 material from this card; inflict 1000 damage to your opponent, then this card gains 1000 ATK. If this Xyz Summoned card is destroyed: You can target 1 card on the field; destroy it, and if you do, inflict 1000 damage to your opponent. You can only use this effect of "Grenosaurus Giga-Cannon" once per turn.
   de:
   es:
   fr:
@@ -41,10 +41,35 @@ def: 2000
 materials: 2 Level 4 monsters
 images:
 - index: 1
-  image: GrenosaurustheMagicHeadCannon-DUNE-JP-R.png
+  image: GrenosaurusGigaCannon-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN046
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE046
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR046
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT046
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT046
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP046
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR046
     set_name: Duelist Nexus
     rarities:
     - Rare
