--- a/data/cards/49109013.yaml
+++ b/data/cards/49109013.yaml
@@ -1,7 +1,7 @@
 konami_id: 18815
 password: 49109013
 name:
-  en: Uruka the Magic Star
+  en: Doomstar Ulka
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔星之乌鲁卡
 text:
   en: |-
-    When 1 monster you control (and no other cards) leaves the field because of an opponent's card effect (except during the Damage Step): You can banish this card from your hand or GY; Special Summon that monster if it is currently banished face-up or in the GY, otherwise Special Summon this banished card. If this card is Special Summoned: You can make it gain 1500 ATK until the end of the next turn. You can only use each effect of "Uruka the Magic Star" once per turn.
+    When 1 monster you control (and no other cards) leaves the field because of an opponent's card effect (except during the Damage Step): You can banish this card from your hand or GY; Special Summon that monster if it is currently banished face-up or in the GY, otherwise Special Summon this banished card. If this card is Special Summoned: You can make it gain 1500 ATK until the end of the next turn. You can only use each effect of "Doomstar Ulka" once per turn.
   de:
   es:
   fr:
@@ -36,10 +36,35 @@ atk: 1500
 def: 400
 images:
 - index: 1
-  image: UrukatheMagicStar-DUNE-JP-C.png
+  image: DoomstarUlka-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN028
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE028
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR028
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT028
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT028
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP028
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR028
     set_name: Duelist Nexus
     rarities:
     - Common
