--- a/data/cards/09709452.yaml
+++ b/data/cards/09709452.yaml
@@ -1,7 +1,7 @@
 konami_id: 18829
 password: 9709452
 name:
-  en: Gaia Blaze, the Force of Blazing Sun
+  en: Gaia Blaze, the Force of the Sun
   de:
   es:
   fr:
@@ -43,10 +43,35 @@ series:
 - Gaia Knight
 images:
 - index: 1
-  image: GaiaBlazetheForceofBlazingSun-DUNE-JP-C.png
+  image: GaiaBlazetheForceoftheSun-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN042
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE042
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR042
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT042
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT042
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP042
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR042
     set_name: Duelist Nexus
     rarities:
     - Common
