--- a/data/cards/14959144.yaml
+++ b/data/cards/14959144.yaml
@@ -1,7 +1,7 @@
 konami_id: 18808
 password: 14959144
 name:
-  en: Ultimate Knight Alpha Ursatron
+  en: Ultimate Bright Knight Ursatron Alpha
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as an "Ursarctic" and "Drytron" card.)
-    Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. If you control an "Ursarctic" or "Drytron" monster other than "Ultimate Knight Alpha Ursatron": You can Special Summon this card from your hand, then you can add 1 "Ursarctic" or "Drytron" Spell/Trap from your Deck to your hand. You can only use this effect of "Ultimate Knight Alpha Ursatron" once per turn.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. If you control an "Ursarctic" or "Drytron" monster other than "Ultimate Bright Knight Ursatron Alpha": You can Special Summon this card from your hand, then you can add 1 "Ursarctic" or "Drytron" Spell/Trap from your Deck to your hand. You can only use this effect of "Ultimate Bright Knight Ursatron Alpha" once per turn.
   de:
   es:
   fr:
@@ -40,10 +40,35 @@ series:
 - Ursarctic
 images:
 - index: 1
-  image: UltimateKnightAlphaUrsatron-DUNE-JP-R.png
+  image: UltimateBrightKnightUrsatronAlpha-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN021
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE021
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR021
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT021
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT021
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP021
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR021
     set_name: Duelist Nexus
     rarities:
     - Rare
