--- a/data/cards/yugipedia991268.yaml
+++ b/data/cards/yugipedia991268.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    "Gaia Blaze, the Force of Blazing Sun" + 1 face-up monster you control
+    "Gaia Blaze, the Force of the Sun" + 1 face-up monster you control
     When your opponent activates a monster effect in the hand or GY (Quick Effect): You can discard 1 monster; negate that effect, and if you do, destroy that card. When this attacking card destroys an opponent's monster by battle: You can target 1 FIRE monster in your GY; Special Summon it. You can only use each effect of "Gaia Prominence, the Kindling Seraph" once per turn.
   de:
   es:
@@ -32,7 +32,7 @@ attribute: FIRE
 level: 11
 atk: 3500
 def: 3100
-materials: '"Gaia Blaze, the Force of Blazing Sun" + 1 face-up monster you control'
+materials: '"Gaia Blaze, the Force of the Sun" + 1 face-up monster you control'
 series:
 - Gaia Knight
 images:
