--- a/data/cards/54126514.yaml
+++ b/data/cards/54126514.yaml
@@ -1,7 +1,7 @@
 konami_id: 18797
 password: 54126514
 name:
-  en: Altergeist Perinetrator
+  en: Altergeist Peritrator
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 变幻骚灵 渗透佩莉
 text:
   en: |-
-    This card can attack directly. You can only use each of the following effects of "Altergeist Perinetrator" once per turn. When this card inflicts battle damage to your opponent: You can draw 1 card. If this card is sent from the field to the GY: You can send 1 "Altergeist" card from your hand, Deck, or face-up field to the GY, except "Altergeist Perinetrator".
+    This card can attack directly. You can only use each of the following effects of "Altergeist Peritrator" once per turn. When this card inflicts battle damage to your opponent: You can draw 1 card. If this card is sent from the field to the GY: You can send 1 "Altergeist" card from your hand, Deck, or face-up field to the GY, except "Altergeist Peritrator".
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Altergeist
 images:
 - index: 1
-  image: AltergeistPerinetrator-DUNE-JP-R.png
+  image: AltergeistPeritrator-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN010
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE010
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR010
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT010
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT010
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP010
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR010
     set_name: Duelist Nexus
     rarities:
     - Rare
